tests/unit/guardrails/restrict-secret-creation-eso-identity/resources.yaml
apiVersion: v1
kind: Secret
metadata:
  name: eso-created-secret
  namespace: secret-backend
type: Opaque
data:
  password: cGFzc3dvcmQ=
