tests/unit/guardrails/restrict-secret-creation-eso-identity/user-info.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: eso-identity
userInfo:
  username: system:serviceaccount:external-secrets:external-secrets
